Automated Code Change
PiperOrigin-RevId: 628782807